renamed api functions
