# api-generator/api-definition.yaml
@@ -21,6 +21,7 @@ tags:
 paths:
   /wad:
     post:
+      operationId: postWad
       description: "Create a new Wad"
       tags:
         - wad
@@ -41,6 +42,7 @@ paths:
           description: "No Wad uploaded"
   /wad/{id}:
     get:
+      operationId: getWad
       description: "Get Wad by id"
       tags:
         - wad
@@ -59,6 +61,7 @@ paths:
                 $ref: '#/components/schemas/WadDto'
   /wadpack:
     post:
+      operationId: postWadpack
       description: "Create a new WadPack"
       tags:
         - wadpack
@@ -79,6 +82,7 @@ paths:
           description: "No WadPack created"
   /wadpack/{id}:
     get:
+      operationId: getWadpack
       description: "Get WadPack by id"
       tags:
         - wadpack
@@ -96,6 +100,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/WadPackDto'
     delete:
+      operationId: deleteWadpack
       description: "Delete a WadPack"
       tags:
         - wadpack
@@ -111,6 +116,7 @@ paths:
         400:
           description: "WadPack not deleted"
     put:
+      operationId: updateWadpack
       description: "Update a WadPack"
       tags:
         - wadpack
@@ -136,6 +142,7 @@ paths:
                 $ref: '#/components/schemas/WadPackDto'
   /download/handler:
     get:
+      operationId: downloadLocalHandler
       tags:
         - download
       description: "download handler to start wads on computer"
@@ -149,6 +156,7 @@ paths:
                 format: binary
   /download/setup:
     get:
+      operationId: downloadSetupScript
       tags:
         - download
       description: "download local setup script"
@@ -162,6 +170,7 @@ paths:
                 format: binary
   /download/wad/{id}:
     get:
+      operationId: downloadWad
       tags:
         - download
       parameters:
@@ -183,6 +192,7 @@ paths:
       description: "download the wad with id 'id'"
   /download/wadpack/{id}:
     get:
+      operationId: downloadWadpack
       tags:
         - download
       parameters:
@@ -204,8 +214,7 @@ paths:
           description: "wadpack does not exists"
   /download/wadpack/{id}/:
     get:
-      operationId: downloadWadPackNoWads
-
+      operationId: downloadWadPackWithoutWads
       tags:
         - download
       parameters:
@@ -227,6 +236,7 @@ paths:
           description: "wadpack does not exists"
   /download/wadpack/{id}/{ids}:
     get:
+      operationId: downloadWadpackWithExplicitWads
       tags:
         - download
       parameters:
